--- a/index.html
+++ b/index.html
@@ -782,33 +782,47 @@
 <!-- End Blog Area -->
 
 		
-		<!-- Start Clients -->
-<div class="clients overlay">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 col-md-12 col-12">
-                <div class="owl-carousel clients-slider">
-                    <div class="single-clients">
-                        <img src="img/client1.png" alt="Client 1">
-                    </div>
-                    <div class="single-clients">
-                        <img src="img/client2.png" alt="Client 2">
-                    </div>
-                    <div class="single-clients">
-                        <img src="img/client3.png" alt="Client 3">
-                    </div>
-                    <div class="single-clients">
-                        <img src="img/client4.png" alt="Client 4">
-                    </div>
-                    <div class="single-clients">
-                        <img src="img/client5.png" alt="Client 5">
+	<!-- Start Partners Section -->
+<section>
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="section-title">
+                <h2>Partners Section</h2>
+                <img src="img/section-img.png" alt="Kelzen Technologies">
+                <p>Explore our trusted partners who help us deliver innovative and transformative technological solutions.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="clients overlay">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-12">
+                    <div class="owl-carousel clients-slider">
+                        <div class="single-clients">
+                            <img src="img/partner1.png" alt="Partner 1">
+                        </div>
+                        <div class="single-clients">
+                            <img src="img/partner2.png" alt="Partner 2">
+                        </div>
+                        <div class="single-clients">
+                            <img src="img/partner3.png" alt="Partner 3">
+                        </div>
+                        <div class="single-clients">
+                            <img src="img/partner4.png" alt="Partner 4">
+                        </div>
+                        <div class="single-clients">
+                            <img src="img/partner5.png" alt="Partner 5">
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<!-- End Clients -->
+</section>
+<!-- End Partners Section -->
+
+
 <!-- Start Service Inquiry -->
 <section class="appointment">
     <div class="container">
