--- a/404.html
+++ b/404.html
@@ -141,18 +141,22 @@
 					<div class="col-lg-6 offset-lg-3 col-12">
 						<!-- Error Inner -->
 						<div class="error-inner">
-							<h1>404<span>Oop's  sorry we can't find that page!</span></h1>
-							<p>Aenean eget sollicitudin lorem, et pretium felis. Nullam euismod diam libero, sed dapibus leo laoreet ut. Suspendisse potenti. Phasellus urna lacus</p>
+							<h1>404<span>Oops! Sorry, we can't find that page!</span></h1>
+							<p>It seems you've reached a page that doesn't exist. Please check the URL or return to the home page for more information.</p>
 							<form class="search-form">
 								<input placeholder="Search from Here" type="text">
 								<button class="btn" type="submit"><i class="fa fa-search"></i></button>
 							</form>
+							<div class="back-home">
+								<a href="index.html" class="btn">Go Back to Home</a>
+							</div>
 						</div>
 						<!--/ End Error Inner -->
 					</div>
 				</div>
 			</div>
-		</section>	
+		</section>
+		
 		<!--/ End Error Page -->
 		
 		<!-- Footer Area -->
