--- a/index.html
+++ b/index.html
@@ -887,6 +887,11 @@
                                     <option value="ict">ICT Consultancy</option>
                                     <option value="networking">Networking Solutions</option>
                                     <option value="support">Technical Support</option>
+                                    <option value="cctv">CCTV Installation</option>
+                                    <option value="solar">Solar System Installation</option>
+                                    <option value="electronic">Electronic Installation</option>
+                                    <option value="starlink">Starlink Installation</option>
+                                    <option value="hosting">Cloud Solutions & Hosting Services</option>
                                 </select>
                             </div>
                         </div>
