Updating software section

--- a/services.html
+++ b/services.html
@@ -175,7 +175,7 @@
                     </div>
                     <h3>Software & Web Development</h3>
                     <p>Developing tailored software and websites to streamline your business operations and enhance your digital presence.</p>
-                    <a href="contact.html" class="btn btn-primary ">Get in Touch</a>
+                    <a href="software/home.html" class="btn btn-primary ">Get in Touch</a>
                 </div>
             </div>
             
