Software section updates

--- a/software/home.html
+++ b/software/home.html
@@ -123,7 +123,7 @@
                 </div>
                 <div class="col-lg-2 col-12">
                     <div class="get-quote">
-                        <a href="services.html" class="btn">Get a Quote</a>
+                        <a href="../services.html" class="btn">Get a Quote</a>
                     </div>
                 </div>
             </div>
@@ -166,12 +166,21 @@
         </div>
         <div class="row">
             <div class="col-lg-6">
+                <h2>Why Choose Our Development Services?</h2>
+                  <p>We deliver cutting-edge software and web solutions that drive growth, improve user engagement, and maximize your return on investment.</p>
                 <ul class="list">
                     <li><i class="fa fa-caret-right"></i> Custom software development</li>
                     <li><i class="fa fa-caret-right"></i> Responsive web design and development</li>
                     <li><i class="fa fa-caret-right"></i> E-commerce platforms and CMS solutions</li>
                     <li><i class="fa fa-caret-right"></i> Mobile application development</li>
                     <li><i class="fa fa-caret-right"></i> API integration and backend services</li>
+                    <li><i class="fa fa-caret-right"></i> Cloud-based solutions and SaaS platforms</li>
+                    <li><i class="fa fa-caret-right"></i> Database design, optimization, and management</li>
+                    <li><i class="fa fa-caret-right"></i> UI/UX design and prototyping</li>
+                    <li><i class="fa fa-caret-right"></i> Performance optimization and scalability solutions</li>
+                    <li><i class="fa fa-caret-right"></i> Maintenance, support, and system upgrades</li>
+                    <li><i class="fa fa-caret-right"></i> Business intelligence and data analytics solutions</li>
+                    
                 </ul>
             </div>
             <div class="col-lg-6">
@@ -223,11 +232,11 @@
                 <div class="col-lg-12">
                     <div class="owl-carousel portfolio-slider">
                         <div class="single-pf">
-                            <img src="img/project1.jpg" alt="Project 1">
+                            <img src="../img/project1.jpg" alt="Project 1">
                             <a href="portfolio-details.html" class="btn">View Details</a>
                         </div>
                         <div class="single-pf">
-                            <img src="img/project2.jpg" alt="Project 2">
+                            <img src="../img/project2.jpg" alt="Project 2">
                             <a href="portfolio-details.html" class="btn">View Details</a>
                         </div>
                     </div>
