--- a/software/home.html
+++ b/software/home.html
@@ -232,11 +232,11 @@
                 <div class="col-lg-12">
                     <div class="owl-carousel portfolio-slider">
                         <div class="single-pf">
-                            <img src="../img/project1.jpg" alt="Project 1">
+                            <img src="img/project1.jpg" alt="Project 1">
                             <a href="portfolio-details.html" class="btn">View Details</a>
                         </div>
                         <div class="single-pf">
-                            <img src="../img/project2.jpg" alt="Project 2">
+                            <img src="img/project2.jpg" alt="Project 2">
                             <a href="portfolio-details.html" class="btn">View Details</a>
                         </div>
                     </div>
