Updating software pages

--- a/services.html
+++ b/services.html
@@ -169,13 +169,13 @@
             <!-- Software & Web Development -->
             <div class="col-lg-4 col-12">
                 <div class="single-features ">
-                    <img src="img/software-web-dev.jpg" alt="Software & Web Development" class="service-image">
+                    <img src="img/software/software-development.jpg" alt="Software & Web Development" class="service-image">
                     <div class="single-icon">
                         <i class="fa fa-code"></i>
                     </div>
                     <h3>Software & Web Development</h3>
                     <p>Developing tailored software and websites to streamline your business operations and enhance your digital presence.</p>
-                    <a href="software/home.html" class="btn btn-primary ">Get in Touch</a>
+                    <a href="software.html" class="btn btn-primary ">Get in Touch</a>
                 </div>
             </div>
             
