creating ICT Section pages

--- a/services.html
+++ b/services.html
@@ -182,13 +182,13 @@
             <!-- ICT Consultancy -->
             <div class="col-lg-4 col-12">
                 <div class="single-features">
-                    <img src="img/ict-consultancy.jpg" alt="ICT Consultancy" class="service-image">
+                    <img src="img/ICT/ICT-Consultancy.jpg" alt="ICT Consultancy" class="service-image">
                     <div class="single-icon">
                         <i class="fa fa-cogs"></i>
                     </div>
                     <h3>ICT Consultancy</h3>
                     <p>Providing expert ICT solutions, including infrastructure setup, cloud migration, and cybersecurity services.</p>
-                    <a href="contact.html" class="btn btn-primary">Get in Touch</a>
+                    <a href="ictconsultancy.html" class="btn btn-primary">Get in Touch</a>
                 </div>
             </div>
 
