Updates, solar page and other pages

--- a/services.html
+++ b/services.html
@@ -226,13 +226,14 @@
             <!-- Solar System Installation -->
             <div class="col-lg-4 col-12">
                 <div class="single-features">
-                    <img src="img/solar-installation.jpg" alt="Solar System Installation" class="service-image">
+                    
                     <div class="single-icon">
                         <i class="fa fa-sun"></i>
                     </div>
                     <h3>Solar System Installation</h3>
+                    <img src="img/solarsystem/solarsystem.jpg" alt="Solar System Installation" class="service-image">
                     <p>Installing sustainable solar power systems to reduce energy costs and promote eco-friendly solutions for your business.</p>
-                    <a href="contact.html" class="btn btn-primary">View Details</a>
+                    <a href="solarsystem.html" class="btn btn-primary">View Details</a>
                 </div>
             </div>
 
