--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <!-- Meta Tags -->
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="keywords" content="Kelzen Technologies, ICT solutions, software development, networking solutions, technical support">
-<meta name="description" content="Kelzen Technologies provides innovative and sustainable technology solutions to empower businesses and transform communities.">
-<meta name='copyright' content='Kelzen Technologies'>
+<meta name="keywords" content="Kelzane Technologies, ICT solutions, software development, networking solutions, technical support">
+<meta name="description" content="Kelzane Technologies provides innovative and sustainable technology solutions to empower businesses and transform communities.">
+<meta name='copyright' content='Kelzane Technologies'>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 <!-- Title -->
-<title>Kelzen Technologies - Empowering Businesses with Innovative Technology Solutions</title>
+<title>Kelzane Technologies - Empowering Businesses with Innovative Technology Solutions</title>
 
 <!-- Favicon -->
 <link rel="icon" href="img/favicon.png">
@@ -37,7 +37,7 @@
 <!-- Magnific Popup CSS -->
 <link rel="stylesheet" href="css/magnific-popup.css">
 
-<!-- Kelzen CSS -->
+<!-- Kelzane CSS -->
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="css/responsive.css">
@@ -81,7 +81,7 @@
                     <!-- Top Contact -->
                     <ul class="top-contact">
                         <li><i class="fa fa-phone"></i>+254 700 000 000</li>
-                        <li><i class="fa fa-envelope"></i><a href="mailto:contact@kelzentech.com">contact@kelzentech.com</a></li>
+                        <li><i class="fa fa-envelope"></i><a href="mailto:contact@Kelzanetech.com">contact@kelzanenetech.com</a></li>
                     </ul>
                     <!-- End Top Contact -->
                 </div>
@@ -98,7 +98,7 @@
                 <div class="col-lg-3 col-md-3 col-12">
                     <!-- Start Logo -->
                     <div class="logo">
-                        <a href="index.html"><img src="img/logo1.png" alt="Kelzen Technologies Logo"></a>
+                        <a href="index.html"><img src="img/logo1.png" alt="Kelzane Technologies Logo"></a>
                     </div>
                     <!-- End Logo -->
                     <!-- Mobile Nav -->
@@ -144,7 +144,7 @@
                             <div class="col-lg-7">
                                 <div class="text">
                                     <h1>Innovative <span>Technology Solutions</span> Tailored for Your Growth</h1>
-                                    <p>At Kelzen Technologies, we deliver bespoke software, ICT solutions, and support to empower businesses and transform communities.</p>
+                                    <p>At Kelzane Technologies, we deliver bespoke software, ICT solutions, and support to empower businesses and transform communities.</p>
                                     <div class="button">
                                         <a href="services.html" class="btn">Explore Services</a>
                                         <a href="about.html" class="btn primary">Learn More</a>
@@ -182,7 +182,7 @@
                             <div class="col-lg-7">
                                 <div class="text">
                                     <h1>Reliable <span>ICT Solutions</span> That Transform Businesses</h1>
-                                    <p>Partner with Kelzen Technologies for end-to-end solutions, from cloud hosting to network design and solar installations.</p>
+                                    <p>Partner with Kelzane Technologies for end-to-end solutions, from cloud hosting to network design and solar installations.</p>
                                     <div class="button">
                                         <a href="contact.html" class="btn">Get Started</a>
                                         <a href="contact.html" class="btn primary">Contact Us</a>
@@ -312,7 +312,7 @@
                 <div class="section-title">
                     <h2>We Are Always Ready to Support Your Business Growth</h2>
                     <img src="img/section-img.png" alt="#">
-                    <p>At Kelzen Technologies, we provide innovative solutions to empower your business through cutting-edge technology and exceptional services.</p>
+                    <p>At Kelzane Technologies, we provide innovative solutions to empower your business through cutting-edge technology and exceptional services.</p>
                 </div>
             </div>
         </div>
@@ -424,8 +424,8 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="section-title">
-                    <h2>Why Choose Kelzen Technologies</h2>
-                    <img src="img/section-img.png" alt="Kelzen Technologies">
+                    <h2>Why Choose Kelzane Technologies</h2>
+                    <img src="img/section-img.png" alt="Kelzane Technologies">
                     <p>Delivering innovative, sustainable, and tailored technological solutions that empower businesses and transform communities.</p>
                 </div>
             </div>
@@ -435,7 +435,7 @@
                 <!-- Start Choose Left -->
                 <div class="choose-left">
                     <h3>Who We Are</h3>
-                    <p>Kelzen Technologies is dedicated to offering cutting-edge IT solutions, enabling businesses to thrive in a rapidly evolving digital world. We take pride in our commitment to innovation, integrity, and excellence.</p>
+                    <p>Kelzane Technologies is dedicated to offering cutting-edge IT solutions, enabling businesses to thrive in a rapidly evolving digital world. We take pride in our commitment to innovation, integrity, and excellence.</p>
                     <p>Our tailored solutions address unique business challenges, ensuring success through sustainable and transformative technology.</p>
                     <div class="row">
                         <div class="col-lg-6">
@@ -486,7 +486,7 @@
             <div class="col-lg-12 col-md-12 col-12">
                 <div class="content">
                     <h2>Looking for Expert IT Solutions? Call Us Today at +254 716 687 910</h2>
-                    <p>Kelzen Technologies is here to provide innovative, sustainable, and tailored IT solutions to empower your business and transform communities.</p>
+                    <p>Kelzane Technologies is here to provide innovative, sustainable, and tailored IT solutions to empower your business and transform communities.</p>
                     <div class="button">
                         <a href="contact.html" class="btn">Contact Us</a>
                         <a href="about.html" class="btn second">Learn More<i class="fa fa-long-arrow-right"></i></a>
@@ -505,7 +505,7 @@
             <div class="col-lg-12">
                 <div class="section-title">
                     <h2>Our Recent Projects</h2>
-                    <img src="img/section-img.png" alt="Kelzen Technologies">
+                    <img src="img/section-img.png" alt="Kelzane Technologies">
                     <p>Explore some of the successful projects we've completed for businesses of all sizes, showcasing our commitment to excellence and innovation.</p>
                 </div>
             </div>
@@ -553,7 +553,7 @@
             <div class="col-lg-12">
                 <div class="section-title">
                     <h2>Our Expert IT Services</h2>
-                    <img src="img/section-img.png" alt="Kelzen Technologies">
+                    <img src="img/section-img.png" alt="Kelzane Technologies">
                     <p>We provide innovative, sustainable, and tailored technological solutions to empower businesses and transform communities.</p>
                 </div>
             </div>
@@ -634,7 +634,7 @@
             <div class="col-lg-12">
                 <div class="section-title">
                     <h2>Flexible IT Solutions at Competitive Prices</h2>
-                    <img src="img/section-img.png" alt="Kelzen Technologies">
+                    <img src="img/section-img.png" alt="Kelzane Technologies">
                     <p>We provide customized technology services designed to meet your business needs without breaking your budget.</p>
                 </div>
             </div>
@@ -747,7 +747,7 @@
             <div class="col-lg-12">
                 <div class="section-title">
                     <h2>Stay Updated with the Latest in Technology and Innovation</h2>
-                    <img src="img/section-img.png" alt="Kelzen Technologies">
+                    <img src="img/section-img.png" alt="Kelzane Technologies">
                     <p>Discover insights, trends, and updates in the tech industry to stay ahead in the digital world.</p>
                 </div>
             </div>
@@ -813,7 +813,7 @@
         <div class="col-lg-12">
             <div class="section-title">
                 <h2>Partners Section</h2>
-                <img src="img/section-img.png" alt="Kelzen Technologies">
+                <img src="img/section-img.png" alt="Kelzane Technologies">
                 <p>Explore our trusted partners who help us deliver innovative and transformative technological solutions.</p>
             </div>
         </div>
@@ -855,7 +855,7 @@
             <div class="col-lg-12">
                 <div class="section-title">
                     <h2>Contact Us to Discuss Your Next Technology Solution</h2>
-                    <img src="img/section-img.png" alt="Kelzen Technologies">
+                    <img src="img/section-img.png" alt="Kelzane Technologies">
                     <p>Reach out to us for tailored solutions to empower your business with cutting-edge technology.</p>
                 </div>
             </div>
@@ -917,7 +917,7 @@
             </div>
             <div class="col-lg-6 col-md-12 ">
                 <div class="appointment-image">
-                    <img src="img/contact-img.png" alt="Contact Kelzen Technologies">
+                    <img src="img/contact-img.png" alt="Contact Kelzane Technologies">
                 </div>
             </div>
         </div>
@@ -933,7 +933,7 @@
             <div class="col-lg-6 col-12">
                 <!-- Start Newsletter Content -->
                 <div class="subscribe-text">
-                    <h6>Stay Updated with Kelzen Technologies</h6>
+                    <h6>Stay Updated with Kelzane Technologies</h6>
                     <p>Subscribe to our newsletter to receive updates on our innovative solutions, services, and community impact.</p>
                 </div>
                 <!-- End Newsletter Content -->
@@ -962,7 +962,7 @@
                 <!-- About Us Section -->
                 <div class="col-lg-3 col-md-6 col-12">
                     <div class="single-footer">
-                        <h2>About Kelzen Technologies</h2>
+                        <h2>About Kelzane Technologies</h2>
                         <p>We deliver innovative, sustainable, and tailored technological solutions that empower businesses and transform communities globally.</p>
                         <!-- Social Links -->
                         <ul class="social">
@@ -1022,7 +1022,7 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-12">
                     <div class="copyright-content">
-                        <p>&copy; 2024 Kelzen Technologies | All Rights Reserved.</p>
+                        <p>&copy; 2024 Kelzane Technologies | All Rights Reserved.</p>
                     </div>
                 </div>
             </div>
