--- a/services.html
+++ b/services.html
@@ -238,17 +238,19 @@
             </div>
 
             <!-- Electronic Installation -->
+            <!-- Graphic Design -->
             <div class="col-lg-4 col-12">
                 <div class="single-features">
-                    <img src="img/electronic-installation.jpg" alt="Electronic Installation" class="service-image">
+                    <img src="img/graphic-design.jpg" alt="Graphic Design" class="service-image">
                     <div class="single-icon">
-                        <i class="fa fa-plug"></i>
+                        <i class="fa fa-pencil"></i>
                     </div>
-                    <h3>Electronic Installation</h3>
-                    <p>Providing professional installation services for a wide range of electronic systems to ensure optimal performance and reliability.</p>
+                    <h3>Graphic Design</h3>
+                    <p>Creating visually appealing and impactful designs tailored to meet business and branding needs, ensuring unique and creative solutions.</p>
                     <a href="contact.html" class="btn btn-primary">View Details</a>
                 </div>
             </div>
+
         </div>
         <div class="row">
             <!-- Starlink Installation -->
