--- a/services.html
+++ b/services.html
@@ -4,13 +4,13 @@
         <!-- Meta Tags -->
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="keywords" content="Kelzen Technologies, ICT solutions, software development, networking solutions, technical support">
-<meta name="description" content="Kelzen Technologies provides innovative and sustainable technology solutions to empower businesses and transform communities.">
-<meta name='copyright' content='Kelzen Technologies'>
+<meta name="keywords" content="Kelzane Technologies, ICT solutions, software development, networking solutions, technical support">
+<meta name="description" content="Kelzane Technologies provides innovative and sustainable technology solutions to empower businesses and transform communities.">
+<meta name='copyright' content='Kelzane Technologies'>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 <!-- Title -->
-<title>Kelzen Technologies - Empowering Businesses with Innovative Technology Solutions</title>
+<title>Kelzane Technologies - Empowering Businesses with Innovative Technology Solutions</title>
 
 <!-- Favicon -->
 <link rel="icon" href="img/favicon.png">
@@ -37,7 +37,7 @@
 <!-- Magnific Popup CSS -->
 <link rel="stylesheet" href="css/magnific-popup.css">
 
-<!-- Kelzen CSS -->
+<!-- Kelzane CSS -->
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="css/responsive.css">
@@ -80,7 +80,7 @@
                     <!-- Top Contact -->
                     <ul class="top-contact">
                         <li><i class="fa fa-phone"></i>+254 700 000 000</li>
-                        <li><i class="fa fa-envelope"></i><a href="mailto:contact@kelzentech.com">contact@kelzentech.com</a></li>
+                        <li><i class="fa fa-envelope"></i><a href="mailto:contact@Kelzanetech.com">contact@Kelzanetech.com</a></li>
                     </ul>
                     <!-- End Top Contact -->
                 </div>
@@ -97,7 +97,7 @@
                 <div class="col-lg-3 col-md-3 col-12">
                     <!-- Start Logo -->
                     <div class="logo">
-                        <a href="index.html"><img src="img/logo1.png" alt="Kelzen Technologies Logo"></a>
+                        <a href="index.html"><img src="img/logo1.png" alt="Kelzane Technologies Logo"></a>
                     </div>
                     <!-- End Logo -->
                     <!-- Mobile Nav -->
@@ -161,7 +161,7 @@
                 <div class="section-title">
                     <h2>We Are Always Ready to Support Your Business Growth</h2>
                     <img src="img/section-img.png" alt="#">
-                    <p>At Kelzen Technologies, we provide innovative solutions to empower your business through cutting-edge technology and exceptional services.</p>
+                    <p>At Kelzane Technologies, we provide innovative solutions to empower your business through cutting-edge technology and exceptional services.</p>
                 </div>
             </div>
         </div>
@@ -309,7 +309,7 @@
                 <!-- About Us Section -->
                 <div class="col-lg-3 col-md-6 col-12">
                     <div class="single-footer">
-                        <h2>About Kelzen Technologies</h2>
+                        <h2>About Kelzane Technologies</h2>
                         <p>We deliver innovative, sustainable, and tailored technological solutions that empower businesses and transform communities globally.</p>
                         <!-- Social Links -->
                         <ul class="social">
@@ -369,7 +369,7 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-12">
                     <div class="copyright-content">
-                        <p>&copy; 2024 Kelzen Technologies | All Rights Reserved.</p>
+                        <p>&copy; 2024 Kelzane Technologies | All Rights Reserved.</p>
                     </div>
                 </div>
             </div>
