Services sections Updates

--- a/ictconsultancy.html
+++ b/ictconsultancy.html
@@ -164,7 +164,7 @@
         </div>
         <div class="row">
             <div class="col-lg-6">
-                <h2>Why Choose Our ICT Consultancy?</h2>
+                <h2>Why Choose Us?</h2>
                 <p>Our experts provide actionable insights and solutions to help businesses harness the power of technology effectively.</p>
                 <ul class="list">
                     <li><i class="fa fa-caret-right"></i> IT infrastructure assessment and planning</li>
