--- a/software.html
+++ b/software.html
@@ -166,7 +166,7 @@
         </div>
         <div class="row">
             <div class="col-lg-6">
-                <h2>Why Choose Our Development Services?</h2>
+                <h2>Why Choose Us?</h2>
                   <p>We deliver cutting-edge software and web solutions that drive growth, improve user engagement, and maximize your return on investment.</p>
                 <ul class="list">
                     <li><i class="fa fa-caret-right"></i> Custom software development</li>
