--- a/cctv.html
+++ b/cctv.html
@@ -164,7 +164,7 @@
         </div>
         <div class="row">
             <div class="col-lg-6">
-                <h2>Why Choose Us for CCTV Services?</h2>
+                <h2>Why Choose Us?</h2>
                 <p>Our team delivers cutting-edge surveillance solutions designed for maximum reliability and performance.</p>
                 <ul class="list">
                     <li><i class="fa fa-caret-right"></i> Professional installation of wired and wireless systems</li>
