--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@
                                     <option value="support">Technical Support</option>
                                     <option value="cctv">CCTV Installation</option>
                                     <option value="solar">Solar System Installation</option>
-                                    <option value="electronic">Electronic Installation</option>
+                                    <option value="graphics">Graphic Design</option>
                                     <option value="starlink">Starlink Installation</option>
                                     <option value="hosting">Cloud Solutions & Hosting Services</option>
                                 </select>
