--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@
                                     <option value="solar">Solar System Installation</option>
                                     <option value="graphics">Graphic Design</option>
                                     <option value="starlink">Starlink Installation</option>
-                                    <option value="hosting">Cloud Solutions & Hosting Services</option>
+                                    <option value="hosting">Hosting Services</option>
                                 </select>
                             </div>
                         </div>
