--- a/services.html
+++ b/services.html
@@ -266,14 +266,14 @@
                 </div>
             </div>
 
-            <!-- Cloud Solutions & Hosting Services -->
+            <!--Hosting Services -->
             <div class="col-lg-4 col-12">
                 <div class="single-features">
-                    <img src="img/cloud-solutions.jpg" alt="Cloud Solutions & Hosting Services" class="service-image">
+                    <img src="img/cloud-solutions.jpg" alt="Hosting Services" class="service-image">
                     <div class="single-icon">
                         <i class="fa fa-cloud"></i>
                     </div>
-                    <h3>Cloud Solutions & Hosting Services</h3>
+                    <h3>Hosting Services</h3>
                     <p>Offering reliable cloud hosting and managed services for scalable and secure solutions to boost your business operations.</p>
                     <a href="contact.html" class="btn btn-primary">View Details</a>
                 </div>
