--- a/graphic.html
+++ b/graphic.html
@@ -176,7 +176,7 @@
                 </ul>
             </div>
             <div class="col-lg-6">
-                <img src="img/graphicdesign/graphic-design-overview.jpg" alt="Graphic Design Services">
+                <img src="img/other services/graphics.jpg" alt="Graphic Design Services">
             </div>
         </div>
     </div>
