--- a/hosting.html
+++ b/hosting.html
@@ -175,7 +175,7 @@
                     </ul>
                 </div>
                 <div class="col-lg-6">
-                    <img src="img/hosting/hosting-services.jpg" alt="Hosting Services">
+                    <img src="img/other services/hosting.jpg" alt="Hosting Services">
                 </div>
             </div>
         </div>
