--- a/network.html
+++ b/network.html
@@ -177,7 +177,7 @@
                 </ul>
             </div>
             <div class="col-lg-6">
-                <img src="img/networkinfrastructure/network-design.jpg" alt="Network & Infrastructure Design">
+                <img src="img/other services/networking1.jpg" alt="Network & Infrastructure Design">
             </div>
         </div>
     </div>
