--- a/starlink.html
+++ b/starlink.html
@@ -173,7 +173,7 @@
                     </ul>
                 </div>
                 <div class="col-lg-6">
-                    <img src="img/starlink/starlink-installation.jpg" alt="Starlink Installation">
+                    <img src="img/other services/starlink.jpg" alt="Starlink Installation">
                 </div>
             </div>
         </div>
